@@ -369,14 +369,20 @@ WRAPPERS>>.
 
 *hash_dir* (*CCACHE_HASHDIR* or *CCACHE_NOHASHDIR*, see <<_boolean_values,Boolean values>> above)::
 
-    If true, ccache will include the current working directory in the hash that
-    is used to distinguish two compilations. This prevents a problem with the
-    storage of the current working directory in the debug info of an object
-    file, which can lead ccache to give a cached object file that has the
-    working directory in the debug info set incorrectly. This option is off by
-    default as the incorrect setting of this debug info rarely causes problems.
-    If you strike problems with GDB not using the correct directory then enable
-    this option. The option only applies when generating debug info (*-g*).
+    If true (which is the default), ccache will include the current working
+    directory (CWD) in the hash that is used to distinguish two compilations
+    when generating debug info (compiler option *-g* with variations).
+    Exception: The CWD will not be included in the hash if *base_dir* is set
+    (and matches the CWD) and the compiler option *-fdebug-prefix-map* is used.
+
+    The reason for including the CWD in the hash by default is to prevent a
+    problem with the storage of the current working directory in the debug info
+    of an object file, which can lead ccache to return a cached object file
+    that has the working directory in the debug info set incorrectly.
+
+    You can disable this setting to get cache hits when compiling the same
+    source code in different directories if you don't mind that CWD in the
+    debug info might be incorrect.
 
 *ignore_headers_in_manifest* (*CCACHE_IGNOREHEADERS*)::
 
